# freedom-convoy

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
artifact/: README.md
config/: gdelt_candidate.yaml  rouleau_aliases.yaml  rouleau_chapters.yaml  rouleau_checksums.sha256  rouleau_geo.yaml
data/: README.md
dbt/: README.md  dbt_project.yml  profiles.yml
dbt/macros/: tests.sql
dbt/models/sources/: raw_gdelt.yml  raw_gdelt__events.sql  raw_gdelt__gkg.sql  raw_gdelt__mentions.sql
dbt/models/staging/gdelt/: schema.yml  stg_gdelt__events.sql  stg_gdelt__gkg.sql  stg_gdelt__mentions.sql
dbt/seeds/: movement_boundary.csv
evaluation/: README.md
marimo/: README.md  observation_layer_profile.py
prompts/: README.md
scripts/: backfill.py  estimate_cost.py  export_observation_summaries.py
sql/: README.md  gdelt_candidate_gkg.sql  gdelt_events_candidate.sql  gdelt_mentions_for_events.sql  rouleau_gdelt_join.sql
src/freedom_convoy_gdelt/extraction/: backfill.py  cost_guard.py  dates.py  estimate_cost.py  extract.py  queries.py  settings.py
src/freedom_convoy_rouleau/: __init__.py  corpus.py  extract.py  load.py  prompts.py  resolve.py  schemas.py  settings.py  verify.py
transcripts/: README.md
