[project]
name = "freedom-convoy-gdelt"
version = "0.1.0"
description = "Cost-guarded GDELT extraction substrate for the Freedom Convoy observation-layer experiment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "db-dtypes>=1.3.0",
    "dbt-core>=1.9.0",
    "dbt-duckdb>=1.9.0",
    "duckdb>=1.1.0",
    "google-cloud-bigquery>=3.25.0",
    "marimo>=0.10.0",
    "pandas>=2.2.0",
    "altair>=5.4.0",
    "pyarrow>=18.0.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "typer>=0.15.1",
    "pymupdf>=1.28.0",
    "openai>=2.44.0",
]

[project.scripts]
gdelt-cost = "freedom_convoy_gdelt.extraction.estimate_cost:app"
gdelt-backfill = "freedom_convoy_gdelt.extraction.backfill:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
